# ProgGUI

./: .env.example  .gitignore  LICENSE  PROGRAM_TYP1.cmd  PROGRAM_TYP2.cmd  README.md  README_BUILD.md  build_exe.py  build_spec.spec  main.py  pyproject.toml  requirements.txt  run.py  setup.py  test_products_quick.py
data/: products.db  products.json  proggui.db  settings.ini  test_products.db
src/: __init__.py  main.py
src/app/: __init__.py  controller.py  gui.py  main.py
src/app/pages/: __init__.py  page_bootloader.py  page_devices.py  page_home.py  page_jtag.py  page_products.py  page_settings.py
src/app/windows/: __init__.py  about_dialog.py  main_window.py
src/config/: __init__.py  config_manager.py  constants.py  language_config.py  settings.py  styles_config.py
src/core/: commands.py  device.py  product.py  product_manager.py
src/database/: __init__.py  db_manager.py
src/utils/: __init__.py  icon_manager.py  logger.py  logging.py  validators.py
